--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - ANDROID_API_LEVEL=30
     - ANDROID_BUILD_TOOLS_VERSION=30.0.0
     - ANDROID_EMU_API_LEVEL=22
-    - ANDROID_ABI=arm64-v8a
+    - ANDROID_ABI=armeabi-v7  a
     - QEMU_AUDIO_DRV=none
 
 android:
@@ -27,6 +27,7 @@ android:
     - extra-android-m2repository
     - extra-android-support
     
+    - android-22
     - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
