--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ android:
     
     - android-22
     - sys-img-armeabi-v7a-android-22
-    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
+    #- sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
       - 'android-sdk-preview-license-52d11cd2' 
