--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - ANDROID_API_LEVEL=30
     - ANDROID_BUILD_TOOLS_VERSION=30.0.0
     - ANDROID_EMU_API_LEVEL=22
-    - ANDROID_ABI=google_apis/armeabi-v7-a
+    - ANDROID_ABI=armeabi-v7a
     - QEMU_AUDIO_DRV=none
 
 android:
@@ -27,10 +27,9 @@ android:
     - extra-android-m2repository
     - extra-android-support
     
-    #- android-22
+    - android-22
+    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
     #- sys-img-armeabi-v7a-android-22
-    - sys-img-armeabi-v7a-android-$ANDROID_BUILD_TOOLS_VERSION
-    #- sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
       - 'android-sdk-preview-license-52d11cd2' 
